--- a/house_preds/项目分析.md
+++ b/house_preds/项目分析.md
@@ -52,13 +52,25 @@
 
    由于没有当地的经济周期或政策周期的相关信息，所以这里笼统地选择100年为一个周期，使得足够覆盖大多数房屋的建造年份范围，同时特征变化也比较平滑，避免周期过短导致特征变化过于频繁。
 
+从结果看，异常值检测使得验证损失从0.17下降到0.14，其他预处理对损失的影响不大，不到0.01的变化。
+
+（参数：k=5, num_epochs=100, lr=5, batch_size=64，Adam算法，线性模型）
+
 ----
 
 ### 训练
 
 1. **模型**
 
-   刚开始使用线性模型，为了进一步提高模型的表达能力，现在使用多层感知机模型。==未来会考虑其他更复杂的模型。==
+   使用的是线性模型。
+
+   为了进一步提高模型的表达能力，尝试过使用多层感知机模型，但是效果不好，无论怎么调参，验证损失都不会比线性模型的情况低多少，调参不好时候甚至损失变高。造成这种情况的可能原因：
+
+   1.数据中的规律以线性关系为主，非线性成分较少；
+
+   2.数据量不足或特征工程未充分暴露非线性模式。
+
+   ==未来会考虑其他的模型。==
 
 2. **损失函数**
 
@@ -70,23 +82,33 @@
 
    刚开始使用随机梯度下降算法(SGD)，SGD对学习率高度敏感，过大的学习率会导致参数更新步长过大，损失暴增甚至出现NaN。且学习率固定，导致有时候参数更新过大，损失优化不够好。因此改用Adam优化算法。
 
-   为了进一步提高优化效率和稳定性，增加动态的学习率。
+   为了进一步提高优化效率和稳定性，增加动态循环的学习率（CyclicLR学习率调度器），它能够接受比较大范围的学习率，通过调节最小学习率和迭代步数，减小初始学习率变化对损失的影响，更好找到最优解。
+
+   ==问题：使用SGD时，训练损失和验证损失几乎完全重合，这说明此时验证损失反映不了模型的泛化能力。原因是学习率设置过低，目前在解决。==
 
 4. **超参数调优**
 
    使用K折交叉验证和网络搜索，粗略寻找最优的超参数。
-   
-   - **交叉验证折数**：$[3,\cdots,8]$
-   
-   - **学习率**：$[10^{-5},\cdots, 10^{-1}]$
-   - **批量大小**：$[2^4,\cdots, 2^8]$
-   - **隐藏层数**：$[1, 2, 3]$
-   - **正则化强度**：$[10^{-4}, \cdots, 10^{-1}]$
-   - **L1正则化比率**：$[0, \cdots, 1]$
-   
+
+   思路：先确定学习率和回合数的大概范围，一般越小曲线越光滑，但是花费的回合数会增多，也容易落入局部最优和鞍点；然后对所有超参数进行网格搜索。
+
+   - **交叉验证折数**：$[5,6,7,8]$
+
+   - **学习率**：$[1,\cdots, 10]\times10^{-6}$ (优先级1)
+
+   - **批量大小**：$[2^5,\cdots, 2^7] $ (优先级2)
+
+   - **回合数**：$[300,350,\cdots,650]$
+
+     
+
    为了提高调参效率，使用Optuna工具实现自动化超参搜索。
-   
-   ==把回合数放入调参有时候会出现过拟合现象，目前正在处理==
+
+   ==问题：把回合数放入自动调参很容易出现过拟合现象，即给出的最优回合数过大。==
+
+   ==原因：这可能是由于加入回合数后，参数空间过大，而搜索次数又不够多导致的。==
+
+   目前采用了早停策略，无需对回合数调优，大大提高了调优效率。
 
 ----
 
@@ -108,14 +130,12 @@
 
 | 版本       | 折数k | 回合数 | 学习率 | 批量大小 | 隐藏层数 | 正则化强度 | L1正则化比率 | 优化算法 | 平均验证损失(log rmse) | 训练损失 | 测试损失 |
 | ---------- | ----- | ------ | ------ | -------- | -------- | ---------- | ------------ | -------- | ---------------------- | -------- | -------- |
-| Init_model | 8     | 102    | 0.0029 | 32       | 无       | 无         | 无           | SGD      | 0.1515                 | 0.1337   | 0.1526   |
-| MLP_model  | 8     | 20     | 0.0422 | 16       | 1        | 0.0956     | 0.7462       | Adam     | 0.1163                 | 0.1063   | 0.1721   |
+| Init_model | 7     | 500    | 5e-6   | 32       | 无       | 无         | 无           | SGD      | 0.1811                 | 0.1833   | 0.1830   |
+| MLP_model  | 10    | 20     | 25.89  | 32       | 0        | 0.0        | 0.0          | Adam     | 0.1237                 | 0.1090   | 0.1749   |
 
 ----
 
 ### 后续改进
-
-- 使用早停技术取代对回合数的调参
 
 - 使用Flask部署预测API
 - 考虑随机森林模型和transformer模型的效果
@@ -129,7 +149,3 @@
 
 
 
------
-
-First 4 maximal missing ratios in numerical features: ['17.74%', '5.55%', '0.55%', '0.00%']
-First 5 maximal missing ratios in category features: ['99.52%', '96.30%', '93.77%', '80.75%', '59.73%', '47.26%', '5.55%']
